--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Power Receiver</string>
+    <string name="send_broadcast">Send Custom Broadcast</string>
 </resources>
